# Dependency-Control

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yaml  package-lock.json  package.json  sonar-project.properties  values.yaml
backend/: .flake8  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  health.py  router.py
backend/app/core/: __init__.py  cache.py  config.py  constants.py  encryption.py  epss.py  housekeeping.py  http_utils.py  init_db.py  metrics.py  notification_prefs.py  permissions.py  s3.py  security.py  worker.py
backend/app/db/: __init__.py  mongodb.py
backend/app/models/: archive.py  base.py  broadcast.py  callgraph.py  chat.py  compliance_report.py  crypto_asset.py  crypto_policy.py  dependency.py  finding.py  finding_record.py  github_api.py  github_instance.py  gitlab_api.py  gitlab_instance.py  invitation.py  license.py  match_signature.py  mcp_api_key.py  policy_audit_entry.py  project.py  stats.py  system.py  team.py  types.py  user.py  waiver.py  webhook.py
backend/app/repositories/: __init__.py  analysis_results.py  archive_metadata.py  base.py  broadcasts.py  callgraphs.py  chat.py  compliance_report.py  crypto_asset.py  crypto_policy.py  dependencies.py  dependency_enrichments.py  distributed_locks.py  findings.py  github_instances.py  gitlab_instances.py  invitations.py  mcp_api_keys.py  policy_audit_entry.py  projects.py  scans.py  system_settings.py  teams.py  token_blacklist.py  users.py  vcs_instances.py  waivers.py  webhook_deliveries.py  webhooks.py
backend/app/schemas/: __init__.py  _oidc_audience.py  analytics.py  archive.py  auth.py  bearer.py  callgraph.py  cbom.py  chat.py  compliance.py  crypto_policy.py  enrichment.py  finding.py  github_instance.py  gitlab_instance.py  ingest.py  kics.py  mcp.py  notification.py  opengrep.py  policy_audit.py  pqc_migration.py  project.py  projections.py  recommendation.py  sbom.py  scan_delta.py  scripts.py  system.py  team.py  token.py  trufflehog.py  user.py  waiver.py  webhook.py
backend/app/services/: aggregator.py  analysis.py  archive.py  archive_bundle.py  cbom_parser.py  github.py  gitlab.py  oidc_utils.py  reachability_enrichment.py  recommendations.py  release_history.py  sbom_parser.py  scan_manager.py  stats.py  update_frequency.py  vulnerability_enrichment.py  vulnerable_symbols.py
backend/scripts/: check_archive_empty.py  generate_iana_catalog.py
backend/tests/: conftest.py  test_chat_models.py  test_chat_rate_limiter.py  test_chat_repository.py  test_chat_service.py  test_chat_tools.py
backend/tests/helpers/: fake_s3.py  permission_presets.py  test_fake_s3.py
backend/tests/integration/: conftest.py  test_analytics_endpoints.py  test_cbom_limit_enforcement.py  test_cert_lifecycle_pipeline.py  test_chat_endpoints.py  test_compliance_pqc_integration.py  test_compliance_report_expiry.py  test_compliance_report_formats.py  test_compliance_report_lifecycle.py  test_compliance_report_permissions.py  test_compliance_report_repository.py  test_compliance_retention.py  test_crypto_analytics_scope_403.py  test_crypto_analyzer_pipeline.py  test_crypto_asset_ingested_webhook.py  test_crypto_asset_repository.py  test_crypto_assets_endpoints.py  test_crypto_policies_endpoints.py  test_crypto_policy_repository.py  test_embedded_cbom_in_sbom.py  test_ingest_cbom.py  test_license_policy_audit.py  test_policy_audit_integration.py  test_policy_audit_notifications.py  test_policy_audit_prune.py  test_policy_audit_repository.py  test_policy_revert.py  test_pqc_migration_endpoint.py  test_pqc_webhook.py  test_project_policy_override.py  test_protocol_cipher_pipeline.py  test_sast_ingest_tags_crypto_misuse.py  test_sbom_ingested_webhook.py  test_scan_delta_endpoint.py  test_teams_webhook.py  test_waiver_applies_to_crypto_finding.py  test_waiver_malformed_match_resilience.py  test_waiver_reanchor_recalc.py
backend/tests/mocks/: __init__.py  fake_mongo.py  github.py  gitlab.py  mongodb.py
backend/tests/schemas/: test_gitlab_instance_schema.py  test_license_policy_schema.py  test_projections.py  test_scan_delta_schemas.py  test_scan_finding_item_schema.py  test_system_schema.py  test_waiver_schema.py
backend/tests/test_api/: test_deps_team_sync.py  test_ingest_auth.py  test_pagination_bounds.py  test_projects_authz.py
backend/tests/test_core/: test_cache.py  test_constants.py  test_encryption.py  test_epss.py  test_housekeeping_archive.py  test_housekeeping_gridfs_refcount.py  test_http_utils.py  test_init_db_collection_names.py  test_init_db_team_backfill.py  test_metrics.py  test_permissions.py  test_s3.py  test_s3_streaming.py  test_security.py  test_worker_failed_analysis.py
backend/tests/test_models/: test_archive.py  test_broadcast.py  test_callgraph_model.py  test_chat.py  (+16 more)
(+832 files in other folders)
