[tool.poetry]
name = "dependency-checks"
version = "0.7.5"
description = "Backend for Dependency Control System"
authors = ["Matthias Duve <morzan1001@gmail.com>"]
license = "MIT"
repository = "https://github.com/morzan1001/Dependency-Control"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.20"
httpx = "^0.28.1"
email-validator = "^2.1.0"
pyotp = "^2.9.0"
qrcode = "^8.2.0"
pillow = "^12.0.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
flake8 = "^7.3.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
