[tool.poetry]
name = "dependency-checks"
version = "1.4.25"
description = "Backend for Dependency Control System"
authors = ["Matthias Duve <morzan1001@gmail.com>"]
license = "MIT"
repository = "https://github.com/morzan1001/Dependency-Control"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.22"
httpx = "^0.28.1"
redis = "^7.1.0"
email-validator = "^2.1.0"
pyotp = "^2.9.0"
qrcode = "^8.2.0"
pillow = "^12.1.0"
jinja2 = "^3.1.0"
markdown = "^3.10"
prometheus-client = "^0.24.1"
aiosmtplib = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"
ruff = "^0.9.0"
pylint = "^4.0.4"
mypy = "^1.19.1"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"
types-qrcode = "^8.2.0.20250914"
types-markdown = "^3.10.0.20251106"
types-requests = "^2.32.4.20260107"

[tool.mypy]
plugins = ["pydantic.mypy"]
implicit_reexport = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist"]

[tool.ruff.lint]
ignore = ["E203", "W293"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
