[tool.poetry]
name = "dependency-checks"
version = "1.4.51"
description = "Backend for Dependency Control System"
authors = ["Matthias Duve <morzan1001@gmail.com>"]
license = "MIT"
repository = "https://github.com/morzan1001/Dependency-Control"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.6"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.22"
httpx = "^0.28.1"
redis = "^7.1.0"
email-validator = "^2.1.0"
pyotp = "^2.9.0"
qrcode = "^8.2.0"
pillow = "^12.1.0"
jinja2 = "^3.1.0"
markdown = "^3.10"
prometheus-client = "^0.24.1"
aiosmtplib = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"
ruff = "^0.15.0"
pylint = "^4.0.4"
mypy = "^1.19.1"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"
types-qrcode = "^8.2.0.20250914"
types-markdown = "^3.10.0.20251106"
types-requests = "^2.32.4.20260107"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
tox = "^4.34.1"

[tool.mypy]
plugins = ["pydantic.mypy"]
implicit_reexport = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist"]

[tool.ruff.lint]
ignore = ["E203", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.tox]
env_list = ["test", "lint", "typecheck"]

[tool.tox.env_run_base]
allowlist_externals = ["poetry"]
commands_pre = [["poetry", "install", "--no-root"]]

[tool.tox.env.test]
description = "Run tests with coverage"
commands = [["poetry", "run", "pytest", "--cov=app", "--cov-report=term-missing", "--cov-report=html:htmlcov", "-q"]]

[tool.tox.env.lint]
description = "Run linting with ruff"
commands = [["poetry", "run", "ruff", "check", "."]]

[tool.tox.env.typecheck]
description = "Run type checking with mypy"
commands = [["poetry", "run", "mypy", "app", "--ignore-missing-imports"]]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
